Revert "Merge branch 'develop' into feat/create-project-page"
This reverts commit 7e4f561bec8cdf44c99636dbdca99f03014be703, reversing
changes made to ef018699d4d2ce3f07920ad707411758fda55e39.
