# gateway/openApiDocumentation.yaml
@@ -4,7 +4,7 @@ info:
   description: API documentation for BSA-Project [Hypecrafter](https://github.com/BinaryStudioAcademy/bsa-2021-hypecrafter)
   version: 0.1.9
 servers:
-  - url: http://localhost:3001/
+  - url: http://localhost:3001/api
     description: Main server
   - url: http://hypecrafter2-env.eba-n3gbu5mb.us-west-2.elasticbeanstalk.com/api
     description: Staging server
@@ -100,7 +100,7 @@ paths:
                   error:
                     type: string
                     example: "Timed out"
-  /categories:
+  /users:
     get:
       tags:
         - Category
@@ -119,38 +119,6 @@ paths:
                   name: "Music"
         '408':
           description: Something go wrong
-  /payment/{userId}/{page}:
-    get:
-      tags:
-        - Payment
-      summary: Returns page of transaction history by page number and userId.
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          description: The userId.
-          schema:
-            type: string
-            format: uuid
-            example: "ac7a5b8f-7fc4-4d1e-81c9-1a9c49c9b529"
-        - name: page
-          in: path
-          required: true
-          description: Number of page.
-          schema:
-            type: integer
-            format: int64
-            minimum: 1
-            example: 2
-      responses:
-        '200':
-          description: Receive page object was success.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HistoryTransactionsPage'
-        '408':
-          description: Something go wrong.
           content:
             application/json:
               schema:
@@ -160,11 +128,6 @@ paths:
                     type: string
                     example: "Timed out"
 components:
-  securitySchemes:
-    bearerAuth:           
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
   schemas:
     User:
       properties:
@@ -172,6 +135,7 @@ components:
           type: integer
         name:
           type: string
+      # Both properties are required
       required:  
         - id
         - name
@@ -206,49 +170,3 @@ components:
 tags:
   - name: User
   - name: Project
-    HistoryTransaction:
-      properties:
-        id:
-          type: string
-          format: uuid
-        item:
-          type: string
-        type:
-          type: string
-        userId:
-          type: string
-          format: uuid
-        createdAt:
-          type: string
-          format: date-time
-        balance:
-          type: string
-        total:
-          type: string
-      required:  
-        - id
-        - item
-        - type
-        - userId
-        - createdAt
-        - balance
-        - total
-      example:
-        id: "1bd48742-fb12-11eb-9a03-0242ac130003"
-        createdAt: "2021-08-12T17:13:20.727Z"
-        userId: "ac7a5b8f-7fc4-4d1e-81c9-1a9c49c9b529"
-        item: "Custom Fund"
-        balance: "$466.35"
-        type: "Balance replenishment"
-        total: "$400.00"
-    HistoryTransactionsPage:
-      properties:
-        isLast: 
-          type: boolean
-        page:
-          type: array
-          items:
-            $ref: '#/components/schemas/HistoryTransaction'
-        
-security:
-  - bearerAuth: []
