# payment/src/common/types/payment/payment.ts
@@ -1,20 +1,6 @@
 export interface Payment {
   id: string;
-  item: string;
-  total: number;
+  amount: number;
   userId: string;
-  balance: number;
-}
-
-export const paginationStep = 5;
-
-export interface Page {
-  isLast: boolean;
-  page: Payment[];
-}
-
-export interface TokenPayload {
-  userId: string;
-  iat: number;
-  exp: number;
+  projectId: string;
 }
